# geographic-perimeter-cal

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/nlohmann/: CMakeLists.txt
lib/simdjson/: CMakeLists.txt
src/: CMakeLists.txt  Country.cpp  Country.hpp  MathPart.hpp  argument_handler.hpp  main.cpp  parser.hpp  sample_of_capitals.geojson
src/data/: capitals._geojson  capitals.geojson  countries._geojson  sample_of_capitals.geojson
